# Necromunda2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
resource/maps/: map1.json
src/: actions.cpp  actions.h  camera.cpp  camera.h  main.cpp  object.h  world.cpp  world.h
